# learning-hour

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/skills/new-kata/: SKILL.md
.claude/skills/update-starters/: SKILL.md
.claude/skills/zip-kata/: SKILL.md
katas/karate-chop/: README.md  pom.xml
katas/karate-chop/src/main/kotlin/: KarateChop.kt
katas/karate-chop/src/test/kotlin/: KarateChopTest.kt  TheTest.kt
katas/refactoring/gilded_rose/: README.md
katas/refactoring/gilded_rose/kotlin/: .gitignore  build.gradle.kts
katas/refactoring/gilded_rose/kotlin/src/main/kotlin/com/gildedrose/: GildedRose.kt  Item.kt  TexttestFixture.kt
katas/refactoring/gilded_rose/kotlin/src/test/kotlin/com/gildedrose/: GildedRoseTest.kt  GoldenMasterTest.kt
katas/refactoring/gilded_rose/python/: .gitignore  gilded_rose.py  pyproject.toml  source-me.bash  texttest_fixture.py
katas/refactoring/gilded_rose/python/tests/: conftest.py  test_gilded_rose.py
katas/refactoring/gilded_rose/typescript/: README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
katas/refactoring/gilded_rose/typescript/src/: gilded-rose.ts  texttest-fixture.ts
katas/refactoring/gilded_rose/typescript/test/: gilded-rose.spec.ts  golden-master.spec.ts
scripts/: new-kata.sh  update-starters.sh  zip-kata.sh
starters/js-jest/: package-lock.json  package.json
starters/js-jest/src/: hello.test.js
starters/kotlin/: pom.xml
starters/kotlin/src/test/kotlin/: TheTest.kt
starters/py-pytest/: pyproject.toml  source-me.bash
