[project]
name = "gilded-rose"
version = "0.1.0"
description = "Gilded Rose refactoring kata"
requires-python = ">=3.9"
dependencies = [
    "pytest",
    "approvaltests",
    "pytest-approvaltests",
    "coverage",
]

[tool.setuptools]
py-modules = ["gilded_rose", "texttest_fixture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
